apps/vault/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  type: ClusterIP
  selector:
    app: vault
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
