apps/vault/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - vault.biplane.v6.rocks
    - vault.biplane.casa
  rules:
    - backendRefs:
        - name: vault
          port: 8200
